// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserPreferencesPage should match the snapshot, display into a desktop viewport 1`] = `
<div>
  <div
    data-mockid="Helmet"
  >
    <title>
      Mon tableau de bord - Mes Accès
    </title>
  </div>
  <div
    class="fr-m-auto fr-px-2w fr-mt-8w"
    id="page-container"
  >
    <div>
      UserPreferencesComponent
    </div>
    <div>
      UserPreferencesIntroductionComponent
    </div>
  </div>
</div>
`;

exports[`UserPreferencesPage should match the snapshot, display into a mobile viewport 1`] = `
<div>
  <div
    data-mockid="Helmet"
  >
    <title>
      Mon tableau de bord - Mes Accès
    </title>
  </div>
  <div
    class="fr-m-auto fr-px-2w fr-mt-5w"
    id="page-container"
  >
    <div>
      UserPreferencesComponent
    </div>
    <div>
      UserPreferencesIntroductionComponent
    </div>
  </div>
</div>
`;
